# sifis-api

./: Cargo.toml  README.md  cross-compile.sh
.github/workflows/: cross.yaml  deploy.yml  sifis-api.yml  sifis-ubuntu.yml
docker/: Dockerfile-OpenWrt
src/: lib.rs  runtime.rs
tests/: mock-server.rs  peer_pid.rs
