[package]
name = "sifis-api"
version = "0.0.0"
edition = "2021"
description = "SIFIS-Home Third-party API"
license = "MIT"
repository = "https://github.com/sifis-home/sifis-rust"
keywords = ["SIFIS-Home"]

[features]
default = ["runtime"]
runtime = ["dep:tracing-subscriber", "tokio/rt-multi-thread", "tokio/fs"]

[dependencies]
tarpc = { version = "0.31.0", features = ["serde-transport", "unix", "serde-transport-bincode"] }
tokio = { version = "1.0", features = ["macros"] }
futures = "0.3"
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["serde_derive"] }
tracing = "0.1.37"
# runtime-only
tracing-subscriber = { version = "0.3.16", optional = true }
toml = "0.7.1"

[[bin]]
name = "sifis-runtime-mock"
required-features = ["runtime"]
