[package]
name = "sifis-api"
version = "0.0.0"
edition = "2021"
description = "SIFIS-Home Third-party API"
license = "MIT"
repository = "https://github.com/sifis-home/sifis-rust"
keywords = ["SIFIS-Home"]

[features]
default = ["runtime", "client"]
runtime = ["dep:tracing-subscriber", "tokio/rt-multi-thread", "tokio/fs"]
client = ["dep:reedline-repl-rs"]

[dependencies]
tarpc = { version = "0.31.0", features = ["serde-transport", "unix", "serde-transport-bincode"] }
tokio = { version = "1.0", features = ["macros"] }
futures = "0.3"
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["serde_derive"] }
tracing = "0.1.37"
# runtime-only
tracing-subscriber = { version = "0.3.16", optional = true }
reedline-repl-rs = { version = "1.0.3", features = ["async"], optional = true }
toml = "0.7.1"
nix = "0.26.2"
libc = "0.2.144"

[[bin]]
name = "sifis-runtime-mock"
required-features = ["runtime"]
